Added client info on first screen
Took 57 minutes

--- a/src/builder-templates/app-links.html
+++ b/src/builder-templates/app-links.html
@@ -2,7 +2,7 @@
     <md-toolbar class="md-theme-light">
         <h2 class="md-toolbar-tools">
             <span style="color: white;">
-                <md-icon class="ion-iphone"></md-icon> Client ID: {{ appSettings.clientId }}
+                <md-icon class="ion-iphone"></md-icon> Useful Links
             </span>
             <md-button class="md-secondary md-icon-button" style="font-size: 30px;"
                        ng-click="copyToClipboard(appSettings.clientId)" aria-label="open">
