--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <script src="data/appSettings.js"></script> <!-- Must come after qmHelpers because we assign to qm.staticData -->
       <script src="data/qmStates.js"></script>
       <script src="data/stateNames.js"></script>
-      <script defer src="data/buildInfo.js"></script>
+<!--      <script defer src="data/buildInfo.js"></script>-->
       <script defer src="data/units.js"></script>
       <script defer src="data/variableCategories.js"></script>
       <script defer src="data/commonVariables.js"></script>
