Fork Me on GitHub Button
Took 24 minutes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <!--<meta http-equiv="refresh" content="0; url=Modo/www/index.html">-->
   <script type="text/javascript">
-      window.location = "www/index.html#" + window.location.hash.substring(1);
+      window.location = "src/index.html#" + window.location.hash.substring(1);
   </script>
   <title>Page Redirection</title>
 </head>
 <body>
 <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-If you are not redirected automatically, follow this <a href='www/index.html'>link to example</a>.
+If you are not redirected automatically, follow this <a href='src/index.html'>link to example</a>.
 </body>
 </html>
