API Credentials Dialog
Took 20 minutes

--- a/src/builder-templates/configuration.html
+++ b/src/builder-templates/configuration.html
@@ -60,8 +60,8 @@
                                 <!--<div ng-include="'builder-templates/app-design-list-fragment.html'"></div>-->
                                 <div ng-include="'builder-templates/oauth-card.html'"></div>
                                 <div ng-include="'builder-templates/app-links.html'"></div>
-                                <div ng-if="appSettings.appStatus.betaDownloadLinks.androidRelease"
-                                     ng-include="'builder-templates/builds-card.html'"></div>
+<!--                                <div ng-if="appSettings.appStatus.betaDownloadLinks.androidRelease"
+                                     ng-include="'builder-templates/builds-card.html'"></div>-->
                             </md-content>
                         </md-tab>
                         <md-tab label="Design">
