--- a/src/builder-templates/app-links.html
+++ b/src/builder-templates/app-links.html
@@ -8,17 +8,18 @@
     </md-toolbar>
     <md-card-content>
         <md-list>
-            <md-list-item class="noright" ng-href="https://curedao.readme.io/reference/getunits">
+            <md-list-item class="noright" ng-href="https://curedao.org/api-docs">
                 <img alt="physicianDashboard"
                      ng-src="img/api-icon.png"
                      class="md-avatar"/>
-                <div class="md-list-item-text">
+                <div class="md-list-item-text" style="line-height: normal">
                     <h4>Interactive API Docs</h4>
-                    <p>Generate API requests in any language!  You can use the token "demo" in the Bearer field for
-                        testing.</p>
+                    <p>Generate API requests in any language!
+                        You can use the token "demo" in the Bearer field for testing.
+                    </p>
                 </div>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;" target="_blank"
-                           ng-href="https://curedao.readme.io/reference/getunits"
+                           ng-href="https://curedao.org/api-docs"
                            aria-label="open">
                     <md-icon class="ion-android-open">
                         <md-tooltip md-direction="down">Open</md-tooltip>
