--- a/src/builder-templates/oauth-card.html
+++ b/src/builder-templates/oauth-card.html
@@ -1,8 +1,12 @@
 <md-card>
-    <md-card-header>
-        <md-card-header-text><span class="md-title"></span></md-card-header-text>
-    </md-card-header>
-    <md-card-content>
+    <md-toolbar class="md-theme-light" ng-click="showApiCredentials = !showApiCredentials">
+        <h2 class="md-toolbar-tools">
+            <span style="color: white;">
+                <md-icon class="ion-link"></md-icon> Click For API Credentials
+            </span>
+        </h2>
+    </md-toolbar>
+    <md-card-content ng-if="showApiCredentials">
         <md-list>
             <md-list-item class="md-1-line">
                 <md-input-container style="width: 100%;">
