--- a/src/index.html
+++ b/src/index.html
@@ -126,20 +126,20 @@
     <!-- build:js scripts/combined-body-libraries.js -->
     <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
     <!-- google maps -->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&sensor=false"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?&sensor=false"></script>-->
     <!--<script src="https://maps-api-ssl.google.com/maps/api/js?libraries=places&key=AIzaSyCKicUHwJwH56bXjaKXkVVh2AqrOFE2Ogk"></script>-->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&libraries=places"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&libraries=places"></script>-->
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/stock/highstock.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/modules/sankey.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/modules/networkgraph.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/stock/modules/data.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/stock/modules/exporting.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/stock/modules/export-data.js"></script>
-  <script type="text/javascript" src="https://code.highcharts.com/modules/annotations.js"></script>
-  <script type="text/javascript" src="https://qm-public.sfo2.digitaloceanspaces.com/js/highcharts-themes/highcharts-themes.js"></script>
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
+  <script src="https://code.highcharts.com/modules/sankey.js"></script>
+  <script src="https://code.highcharts.com/modules/networkgraph.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/data.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+  <script src="https://code.highcharts.com/modules/annotations.js"></script>
+  <script src="https://static.quantimo.do/js/highcharts-themes/highcharts-themes.js"></script>
     <script src="lib/highcharts-ng/dist/highcharts-ng.js"></script>
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
@@ -161,8 +161,8 @@
     <script src="lib/angular-d3-word-cloud/dist/angular-word-cloud.min.js"></script>
     <script src="lib/gsap/src/minified/TweenMax.min.js"></script>
     <script src="lib/ng-file-upload/ng-file-upload.min.js"></script>
-    <script type="text/javascript" src="lib/simple-web-notification/web-notification.js"></script>
-    <script type="text/javascript" src="lib/angular-web-notification/angular-web-notification.js"></script>
+    <script src="lib/simple-web-notification/web-notification.js"></script>
+    <script src="lib/angular-web-notification/angular-web-notification.js"></script>
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/ngFitText/dist/ng-FitText.min.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
