Cypress beforeEach request watchers
Took 52 minutes

--- a/src/builder-templates/oauth-card.html
+++ b/src/builder-templates/oauth-card.html
@@ -87,7 +87,7 @@
             <md-list-item class="md-3-line">
                 <div class="md-list-item-text" layout="column">
                     <h3>OAuth Authentication URL</h3>
-                    <h4>https://api.curedao.org/api/oauth2/authorize</h4>
+                    <h4>https://app.quantimo.do/api/oauth2/authorize</h4>
                     <p>The URL you should send users to to collect an OAuth token.</p>
                 </div>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;"
@@ -99,7 +99,7 @@
                     </md-icon>
                 </md-button>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;"
-                           ng-click="copyToClipboard('https://api.curedao.org/api/oauth2/authorize')"
+                           ng-click="copyToClipboard('https://app.quantimo.do/api/oauth2/authorize')"
                            aria-label="Copy to clipboard">
                     <md-icon class="ion-clipboard">
                         <md-tooltip md-direction="down">Copy to clipboard</md-tooltip>
@@ -109,7 +109,7 @@
             <md-list-item class="md-3-line">
                 <div class="md-list-item-text" layout="column">
                     <h3>OAuth Token URL</h3>
-                    <h4>https://api.curedao.org/api/oauth2/token</h4>
+                    <h4>https://app.quantimo.do/api/oauth2/token</h4>
                     <p>The URL you should use to turn the code into an access token (second portion of
                         the OAuth flow).</p>
                 </div>
@@ -122,7 +122,7 @@
                     </md-icon>
                 </md-button>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;"
-                           ng-click="copyToClipboard('https://api.curedao.org/api/oauth2/token')"
+                           ng-click="copyToClipboard('https://app.quantimo.do/api/oauth2/token')"
                            aria-label="Copy to clipboard">
                     <md-icon class="ion-clipboard">
                         <md-tooltip md-direction="down">Copy to clipboard</md-tooltip>
