--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
     <script src="lib/q/q.js"></script>
     <!--<script src="js/responsivevoice.js"></script>-->
     <!--<script src='https://connect.humanapi.co/connect.js'></script>-->
-    <!--<script src='https://api.curedao.org/api/v1/connect.js'></script>-->
+    <!--<script src='https://app.quantimo.do/api/v1/connect.js'></script>-->
     <!-- I think we're already including UserVoice in the JavaScript <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zFZhM9zeDpFAXUFUyPKSQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>-->
     <!-- endbuild -->
 <!--    <script>
