--- a/src/index.html
+++ b/src/index.html
@@ -132,13 +132,13 @@
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
-  <script src="https://code.highcharts.com/stock/highstock.js"></script>
-  <script src="https://code.highcharts.com/modules/sankey.js"></script>
-  <script src="https://code.highcharts.com/modules/networkgraph.js"></script>
-  <script src="https://code.highcharts.com/stock/modules/data.js"></script>
-  <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
-  <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
-  <script src="https://code.highcharts.com/modules/annotations.js"></script>
+  <script src="highcharts/highstock.js"></script>
+  <script src="highcharts/sankey.js"></script>
+  <script src="highcharts/networkgraph.js"></script>
+  <script src="highcharts/data.js"></script>
+  <script src="highcharts/exporting.js"></script>
+  <script src="highcharts/export-data.js"></script>
+  <script src="highcharts/annotations.js"></script>
   <script src="https://static.quantimo.do/js/highcharts-themes/highcharts-themes.js"></script>
     <script src="lib/highcharts-ng/dist/highcharts-ng.js"></script>
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
