--- a/apps/ionic/src/search/index.html
+++ b/apps/ionic/src/search/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
-    <script src="../../lib/quantimodo/quantimodo-web.js"></script>
+    <script src="../lib/quantimodo/quantimodo-web.js"></script>
     <script src="../js/ionIcons.js"></script>
     <script src="../js/qmLogger.js"></script>
     <script src="../js/qmHelpers.js"></script>
