--- a/apps/ionic/src/api-portal.html
+++ b/apps/ionic/src/api-portal.html
@@ -23,8 +23,8 @@
       <script src="https://static.quantimo.do/lib/jquery/dist/jquery.min.js"></script>
       <!--Putting jQuery before Angular to see if it fixes double click issue per https://github.com/angular/angular.js/issues/6251 -->
       <script src="https://static.quantimo.do/lib/ionic/js/ionic.bundle.js"></script>
-      <!--<script src="https://static.quantimo.do/lib/templates.js"></script>-->
-      <script src="https://static.quantimo.do/lib/oclazyload/dist/ocLazyLoad.min.js"></script>
+      <!--<script defer src="https://static.quantimo.do/lib/templates.js"></script>-->
+      <script defer src="https://static.quantimo.do/lib/oclazyload/dist/ocLazyLoad.min.js"></script>
     <script src="js/qmLogger.js"></script>
     <script src="js/qmHelpers.js"></script>
     <script src="js/ionIcons.js"></script>
@@ -58,9 +58,9 @@
     <!--<script src="https://maps.googleapis.com/maps/api/js?&sensor=false"></script>-->
     <!--<script src="https://maps-api-ssl.google.com/maps/api/js?libraries=places&key=AIzaSyCKicUHwJwH56bXjaKXkVVh2AqrOFE2Ogk"></script>-->
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&libraries=places"></script>-->
-    <script src="https://static.quantimo.do/lib/moment/min/moment.min.js"></script>
-    <script src="https://static.quantimo.do/lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-moment/angular-moment.js"></script>
+    <script defer src="https://static.quantimo.do/lib/moment/min/moment.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-moment/angular-moment.js"></script>
   <script src="highcharts/highstock.js"></script>
   <script src="highcharts/sankey.js"></script>
   <script src="highcharts/networkgraph.js"></script>
@@ -68,31 +68,31 @@
   <script src="highcharts/exporting.js"></script>
   <script src="highcharts/export-data.js"></script>
   <script src="highcharts/annotations.js"></script>
-  <script src="https://static.quantimo.do/js/highcharts-themes/highcharts-themes.js"></script>
-    <script src="https://static.quantimo.do/lib/highcharts-ng/dist/highcharts-ng.js"></script>
-    <script src="https://static.quantimo.do/lib/pluralize/pluralize.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-clipboard/angular-clipboard.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-google-analytics/dist/angular-google-analytics.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-material-datetimepicker/js/angular-material-datetimepicker.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-aria/angular-aria.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-animate/angular-animate.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-material/angular-material.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-cache/dist/angular-cache.min.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-messages/angular-messages.js"></script>
-    <script src="https://static.quantimo.do/lib/ng-material-floating-button/src/mfb-directive.js"></script>
-    <script src="https://static.quantimo.do/lib/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="https://static.quantimo.do/lib/ng-file-upload/ng-file-upload.min.js"></script>
-    <script src="https://static.quantimo.do/lib/simple-web-notification/web-notification.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-web-notification/angular-web-notification.js"></script>
-    <script src="https://static.quantimo.do/lib/firebase/firebase.js"></script>
-    <script src="https://static.quantimo.do/lib/ngFitText/dist/ng-FitText.min.js"></script>
-    <script src="https://static.quantimo.do/lib/underscore/underscore-min.js"></script>
-    <script src="https://static.quantimo.do/lib/pusher-js/dist/web/pusher.js"></script>
+  <script defer src="https://static.quantimo.do/js/highcharts-themes/highcharts-themes.js"></script>
+    <script defer src="https://static.quantimo.do/lib/highcharts-ng/dist/highcharts-ng.js"></script>
+    <script defer src="https://static.quantimo.do/lib/pluralize/pluralize.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-clipboard/angular-clipboard.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-google-analytics/dist/angular-google-analytics.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-material-datetimepicker/js/angular-material-datetimepicker.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-aria/angular-aria.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-animate/angular-animate.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-material/angular-material.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-cache/dist/angular-cache.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-messages/angular-messages.js"></script>
+    <script defer src="https://static.quantimo.do/lib/ng-material-floating-button/src/mfb-directive.js"></script>
+    <script defer src="https://static.quantimo.do/lib/gsap/src/minified/TweenMax.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/ng-file-upload/ng-file-upload.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/simple-web-notification/web-notification.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-web-notification/angular-web-notification.js"></script>
+    <script defer src="https://static.quantimo.do/lib/firebase/firebase.js"></script>
+    <script defer src="https://static.quantimo.do/lib/ngFitText/dist/ng-FitText.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/underscore/underscore-min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/pusher-js/dist/web/pusher.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/SpeechKITT/1.0.0/speechkitt.min.js"></script>-->
-    <script src="https://static.quantimo.do/lib/svg-morpheus/compile/minified/svg-morpheus.js"></script>
-    <script src="https://static.quantimo.do/lib/angular-material-icons/angular-material-icons.min.js"></script>
-    <script src="https://static.quantimo.do/lib/q/q.js"></script>
-    <script src="https://static.quantimo.do/lib/compromise/builds/compromise.js"></script> <!-- compromise produces errors when minified for some reason -->
+    <script defer src="https://static.quantimo.do/lib/svg-morpheus/compile/minified/svg-morpheus.js"></script>
+    <script defer src="https://static.quantimo.do/lib/angular-material-icons/angular-material-icons.min.js"></script>
+    <script defer src="https://static.quantimo.do/lib/q/q.js"></script>
+    <script defer src="https://static.quantimo.do/lib/compromise/builds/compromise.js"></script> <!-- compromise produces errors when minified for some reason -->
         <!-- Start of Async Drift Code -->
         <script>
             !function() {
