Better layouts, styles and login page

--- a/apps/ionic/src/index.html
+++ b/apps/ionic/src/index.html
@@ -50,8 +50,8 @@
       <script defer src="data/commonVariables.js"></script>
       <script defer src="data/docs.js"></script>
       <script defer src="data/dialogAgent.js"></script>
-    <script async src="js/app.js"></script>
-    <script async src="js/services/qmService.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services/qmService.js"></script>
     <!-- Here we inject app builder files not needed in the normal end-user app -->
     <!-- inject:js -->
     <script async src="js/configurationCtrl.js"></script>
