Synchronously load appCtrl first

--- a/apps/ionic/src/index.html
+++ b/apps/ionic/src/index.html
@@ -54,14 +54,14 @@
     <script src="js/services/qmService.js"></script>
     <!-- Here we inject app builder files not needed in the normal end-user app -->
     <!-- inject:js -->
-    <script async src="js/configurationCtrl.js"></script>
-    <script async src="js/configurationService.js"></script>
-    <script async src="js/physicianCtrl.js"></script>
+    <script src="js/configurationCtrl.js"></script>
+    <script src="js/configurationService.js"></script>
+    <script src="js/physicianCtrl.js"></script>
     <script defer src="https://static.quantimo.do/dev/src/lib/tinycolor/dist/tinycolor-min.js"></script>
     <script defer src="https://static.quantimo.do/dev/src/lib/md-color-picker/dist/mdColorPicker.min.js"></script>
     <!-- endinject -->
-    <script async src="js/quantimodoFilters.js"></script>
-    <script async src="js/controllers/appCtrl.js"></script>
+    <script src="js/quantimodoFilters.js"></script>
+    <script src="js/controllers/appCtrl.js"></script>
     <script async src="js/controllers/remindersInboxCtrl.js"></script>
     <script async src="js/controllers/favoritesCtrl.js"></script>
     <script async src="js/controllers/introCtrl.js"></script>
