Load Login controller immediately

--- a/apps/ionic/src/builder-templates/configuration.html
+++ b/apps/ionic/src/builder-templates/configuration.html
@@ -70,12 +70,12 @@
                                      ng-include="'builder-templates/builds-card.html'"></div>-->
                             </md-content>
                         </md-tab>
-                        <md-tab label="API" style="height: 100%; width: 100%; ">
+<!--                        <md-tab label="API" style="height: 100%; width: 100%; ">
                             <iframe ng-src="api-docs.html"
                                     data-tap-disabled="true" style="height: 100%; width: 100%; position: absolute;"
                                     frameborder="0">
                             </iframe>
-                        </md-tab>
+                        </md-tab>-->
                         <md-tab label="Design">
                             <md-content class="md-padding">
                                 <!--<div ng-include="'builder-templates/app-design-list-fragment.html'"></div>-->
