--- a/apps/ionic/src/index.html
+++ b/apps/ionic/src/index.html
@@ -67,7 +67,7 @@
     <script async src="js/controllers/introCtrl.js"></script>
     <!--<script async src="js/controllers/fabric.js"></script> Not sure if this does anything.  We might want to enable for native error logging sometime. -->
     <script async src="js/controllers/variableSettingsCtrl.js"></script>
-    <script async src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
     <script async src="js/controllers/patch.js"></script>
     <script async src="js/controllers/welcomeCtrl.js"></script>
     <script async src="js/controllers/trackPrimaryOutcomeCtrl.js"></script>
