--- a/apps/ionic/src/builder-templates/configuration.html
+++ b/apps/ionic/src/builder-templates/configuration.html
@@ -21,7 +21,7 @@
         <div id="app-builder" ng-if="!patientUser" style="max-height: 100%">
             <div ng-if="!appList" ng-cloak>
                 <br> <br>
-                <h1 style="text-align: center;">Loading your apps.. </h1>
+                <h1 style="text-align: center;" class="pulsating-glowing-text">Loading your apps.. </h1>
                 <br>
                 <div style="text-align: center"><br>
                     <ion-spinner icon="android"></ion-spinner>
