Use CDN for some scripts

--- a/apps/ionic/src/android_popup.html
+++ b/apps/ionic/src/android_popup.html
@@ -100,11 +100,11 @@
         <!--suppress HtmlUnknownTarget -->
         <script src="cordova.js"></script>
         <!-- build:js scripts/popup-combined-head-libraries.js -->
-        <script src="lib/q/q.js"></script>
-        <script src="lib/bugsnag/dist/bugsnag.js"></script>
+        <script src="https://static.quantimo.do/lib/q/q.js"></script>
+        <script src="https://static.quantimo.do/lib/bugsnag/dist/bugsnag.js"></script>
         <script src="lib/quantimodo/quantimodo-web.js"></script>
-        <script src="lib/localforage/dist/localforage.js"></script>
-        <script src="lib/underscore/underscore-min.js"></script>
+        <script src="https://static.quantimo.do/lib/localforage/dist/localforage.js"></script>
+        <script src="https://static.quantimo.do/lib/underscore/underscore-min.js"></script>
         <script src="js/qmLogger.js"></script>
         <script src="js/qmHelpers.js"></script>
         <script src="data/appSettings.js"></script> <!-- Must come after qmHelpers because we assign to qm.staticData -->
