--- a/apps/ionic/src/auth.html
+++ b/apps/ionic/src/auth.html
@@ -26,8 +26,8 @@
       <link rel="shortcut icon"
             href="img/icons/icon_16.png">
       <!-- build:js scripts/combined-head-libraries.js -->
-      <script crossorigin="anonymous"
-              src="https://cdn.lr-ingest.io/LogRocket.min.js"></script>
+<!--      <script crossorigin="anonymous"-->
+<!--              src="https://cdn.lr-ingest.io/LogRocket.min.js"></script>-->
       <script defer src="https://static.quantimo.do/lib/bugsnag/dist/bugsnag.js"></script>
       <script src="js/psychedelic-loader-ionic.js"></script>
       <script defer src="https://static.quantimo.do/lib/localforage/dist/localforage.js"></script>
@@ -178,7 +178,7 @@
     <!--<script async src="js/responsivevoice.js"></script>-->
     <!--<script src='https://connect.humanapi.co/connect.js'></script>-->
     <!--<script src='https://app.quantimo.do/api/v1/connect.js'></script>-->
-    <!-- I think we're already including UserVoice in the JavaScript <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.public='//widget.uservoice.com/zFZhM9zeDpFAXUFUyPKSQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>-->
+    <!-- I think we're already including UserVoice in the JavaScript <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zFZhM9zeDpFAXUFUyPKSQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>-->
     <!-- endbuild -->
 <!--    <script>
         if (typeof Pusher === 'undefined') {
@@ -199,7 +199,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.public = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -220,7 +220,7 @@
             var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq ||
             {widgetcode:"86bd2cf1ba17feb4c0621b58a24f913459f527533b917cbfa57b476df1b08f3c", values:{},ready:function(){}};
             var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
-            s.public="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);
+            s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);
             d.write("<div id='zsiqwidget'></div>");
         } catch (error) {
             console.warn(error);
@@ -245,7 +245,7 @@
                 }), t.load = function(t) {
                     var e, n, o, i;
                     e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"),
-                        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.public = "https://js.driftt.com/include/" + i + "/" + t + ".js",
+                        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js",
                         n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
                 });
             }();
