--- a/apps/ionic/src/crowdsourcing-cures.html
+++ b/apps/ionic/src/crowdsourcing-cures.html
@@ -896,7 +896,7 @@
                         </a>
                     </li>
                 </ul>
-                <div class="site-info text-xs mb-0 lg:w-full">
+                <div class="site-info text-lg mb-0 lg:w-full">
                     © 2020&nbsp; <span class="copyright">
 The Foundation for the Eradication of Dementia And Mental Illness </span>
                 </div>
