--- a/apps/ionic/src/index.html
+++ b/apps/ionic/src/index.html
@@ -255,5 +255,37 @@
         </script>-->
         <!-- End of Async Drift Code -->
         <script async src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+	  <script async src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+	  <script
+			  onload="LitJsSdk.litJsSdkLoadedInALIT()"
+			  src="https://jscdn.litgateway.com/index.web.js"
+	  ></script>
+	  <script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.7/src/glowCookies.min.js"></script>
+	  <script>
+		  glowCookies.start('en', {
+			  // style: 2,
+			  // analytics: 'G-FH87DE17XF',
+			  // facebookPixel: '990955817632355',
+			  hideAfterClick: true,
+			  // border: 'none',
+			  // position: 'right',
+			  policyLink: '/privacy',
+			  // customScript: [{ type: 'custom', position: 'body', content: `console.log('my custom js');` }],
+			  // bannerDescription: 'banner desc',
+			  // bannerLinkText: 'banner link text',
+			  //bannerBackground: '#000',
+			  //bannerColor: '#fafafa',
+			  // bannerHeading: '<h2>Cookies</h2>',
+			  // acceptBtnText: 'accept btn text',
+			  // acceptBtnColor: 'green',
+			  // acceptBtnBackground: 'red',
+			  // rejectBtnText: 'reject btn text',
+			  // rejectBtnBackground: 'lightblue',
+			  // rejectBtnColor: 'blue',
+			  // manageColor: 'white',
+			  // manageBackground: 'blue',
+			  // manageText: 'cookies text'
+		  });
+	  </script>
   </body>
 </html>
