--- a/apps/ionic/src/search/index.html
+++ b/apps/ionic/src/search/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
     <script src="../lib/quantimodo/quantimodo-web.js"></script>
-    <script src="../js/ionIcons.js"></script>
+    <script src="https://static.quantimo.do/js/ionIcons.js"></script>
     <script src="../js/qmLogger.js"></script>
     <script src="../js/qmHelpers.js"></script>
     <script src="../data/appSettings.js"></script> <!-- Must come after qmHelpers because we assign to qm.staticData -->
